_assets/css/main.css
/* ... */
button:focus {
  outline:0 !important;
}

.hide-savings{
  visibility: hidden;
}

.show-savings{
  visibility: visible;
}

.btn {
  font-family: neosans;
}

.button-red {
  background: #ea2127;
  border: none;
  padding: 10px 90px;
  color: #fff;
  cursor: pointer;
  font-family: neosans;
  margin-bottom: 30px;
}

.call-button {
  background: #ea2127;
  border: none;
  padding: 10px 30px;
  color: #fff;
  cursor: pointer;
  font-family: neosans;
  border-radius: 40px;
  margin-left: 30px;
  margin-top: 20px
}

.request-menu {
  background: #ea2127;
  border: none;
  padding: 5px 20px;
  color: #ffffff!important;
  border-radius: 30px;
  margin-top: -43px;
  margin-right: 90px;
  float: right;
  font-size: 13px;
  font-family: neosans;
  height: 30px;
  line-height: 23px;
  cursor: pointer;
}

.register-button {
  margin-right: -25px
}

.button-red:hover {
  color: #fff !important;
}

.button-red:focus {
  color: #fff;
  outline: none!important
}

.letter-spacing {
  letter-spacing: 1px;
}

.scan-list {
  width: 58%;
  margin-bottom: 30px;
  margin-top: 20px;
  text-align: left;
  margin-left: 40px;
  font-size: 14px;
  color: #816f85;
}

.enterprise-list{
  width: 70%;
  margin-left: 42px;
}

.enterprise-features {
  margin-bottom: 0 !important;
  margin-top: 6px !important;
  width: 90%;
  margin-top: 10px;
  text-align: left;
  margin-left: 30px;
  font-size: 14px;
  color: #7f7f7f;
}

.black-font{
  color: #000000;
  font-weight: 900;
}

.scan-enter {
  margin-bottom: 20px;
  width: 100%;
  text-align: left;
  margin-left: 40px;
  font-size: 14px;
  font-style: gillsans;
  color: #5d4770;
}

#know-more{
  display: none;
  font-size: 10px;
}

.button-white {
  background: #f5f5f5;
  border-color: #000;
  padding: 5px 20px;
  color: #000;
  cursor: pointer;
  font-family: neosans;
  margin-bottom: 30px;
}

.button-white:active {
  background-color: #cdcdcd;
}

.button-white:hover {
  background-color: #cdcdcd;
}

.button-gray {
  background: #dedede;
  border: none;
  padding: 10px 20px;
  color: #555;
  transition: all .35s ease-out;
  margin-top: 20px;
}

.button-green {
  background: #4CAF50;
  border: none;
  padding: 10px 40px;
}

.uppercase {
  text-transform: uppercase;
}

.half-block-container {
  margin: 10px 0 0px;
  text-align: left;
}

#ak-radar-zone {
  padding-bottom: 30px;
}

#ak-dotted-circle {
  margin-top: 30px;
  width: 50px;
}

#ak-cellphone-14 {
  position: relative;
  top: 20px;
  right: 150px;
  width: 100px;
}

#head-txt-14 {
  margin-top: 50px;
  font-size: 25px;
}

#many-more-team {
  margin-top: 20px;
}

.side-icon {
  width: 90%;
  max-width: 300px;
  margin: 0 auto;
}

#testimony-container {
  min-height: 200px;
}

.testimonial-section{
  height: 300px;
}

.carousel-spots li{
  width: 9px;
  height: 9px;
  border: 1px solid #000;
  border-radius: 100%;
  line-height: 30px;
  color: #fff;
  background-color: #f6f6f6;
}

.carousel-spots .active {
  width: 9px;
  height: 9px;
  margin: 1px;
  background-color: #000;
  border: 1px solid #000;
  border-radius: 100%;
}

.user-comments {
  color: #888;
  max-width: 80%;
  margin: 10px auto 60px;
  text-align : center;
  min-height: 80px;
  font-size: 24px;
  font-family: gillsansmtpro;
}

.pricing-testLogo{
  margin-top: 15px;
}

.pricing-testOpinion{
  margin-top: 40px!important;
}

.client-sign{
  margin-top: 10px;
}

.logo-pos{
  margin-top: -20px;
}

.last-logo {
  margin-top: -35px
}

.sign-pos{
  margin-top: 20px;
}

.carousel-spots{
  top: 300px;
  bottom: 0px;
}

.carousel-button{
  width: 0px;
  color: #000000;
}

.carousel-button:hover, .carousel-button:focus{
  color: #525252;
}

.user-opinion{
  color: #888;
  max-width: 400px;
  margin: 30px auto 30px;
  min-height: 80px;
}

#testimony-selector {
  width: 70%;
  max-width: 600px;
  margin: 10px auto;
}

.carousel.carousel-fade .item {
	-webkit-transition: opacity 0s ease-in-out;
	-moz-transition: opacity 0s ease-in-out;
	-ms-transition: opacity 0s ease-in-out;
	-o-transition: opacity 0s ease-in-out;
	transition: opacity 0s ease-in-out;
	opacity:0;
}

.carousel.carousel-fade .active.item {
	opacity:1;
}

.carousel.carousel-fade .active.left,
.carousel.carousel-fade .active.right {
	left: 0;
	z-index: 2;
	opacity: 0;
	filter: alpha(opacity=0);
}

.carousel.carousel-fade .next,
.carousel.carousel-fade .prev {
	left: 0;
	z-index: 1;
}

.carousel.carousel-fade .carousel-control {
	z-index: 3;
}

.horz-select-span {
  width: 100%;
  max-width: 400px;
  margin: 0 auto;
  height: 1px;
  background: #bbb;
}

.horz-selected-span {
  width: 100%;
  max-width: 400px;
  margin: 30px auto 0;
  height: 2px;
}

.horz-selected-span>span {
  width: 10%;
  margin-top: -1px;
  height: 2px;
  display: block;
  background: #aaa;
}

.logos-box {
  margin-top: 30px;
}

.logos-box>li {
  width: 130px;
  display: inline-block;
  margin: 20px;
}

.logos-box>li>img {
  width: 100%;
  opacity: 1;
  transition: all .3s ease-out;
}

.logos-box>li>img:hover {
  opacity: 1;
}

#contact-form-holder {
  width: 90%;
  margin: 20px auto;
  max-width: 800px;
  font-size: 17px;
}

.country-code fieldset .intl-tel-input {
   display: block
 }

.country-code fieldset .intl-tel-input input.placeholder-position {
   padding-left: 75px!important
 }

#contact-form-holder textarea,#contact-form-holder input[type=text],#contact-form-holder input[type=email] {
  background: #f8f8f8;
  border: none;
  margin: 3px auto 0;
  box-shadow: none;
  padding: 12px 15px;
  font-size: 17px;
}

#contact-form-holder textarea {
  margin: 40px 0;
}

#hello-zone-cu {
  padding-top: 40px;
}

#hello-zone-cu img {
  width: 100px;
}

#form-social-block,.form-social-block {
  text-align: center;
  margin-top: 30px;
  margin-bottom: 30px;
}

#form-social-block img,.form-social-block img {
  width: 35px;
  margin-left: 15px;
}

.form-title {
  font-size: 1.1em;
  lserpadding-bottom: 3px;
  border-bottom: 1px solid #ccc;
  display: inline-block;
}
/* ... */

